--- a/php/sass/elements/_sidebar.scss
+++ b/php/sass/elements/_sidebar.scss
@@ -19,7 +19,7 @@
 		margin-bottom: 20px;
 	}
 	.select-style {
-		width: 66%;
+		width: auto;
 		float:right;
 	}
 }
