--- a/php/sass/partials/_buttons.scss
+++ b/php/sass/partials/_buttons.scss
@@ -76,11 +76,11 @@ form {
     overflow: hidden;
     background: #fff url("../img/dropdown.jpg") no-repeat top right;
     opacity: 0.6;
-    height:31px;
+    //height:31px;
    	float:left;
    	select {
 		color:#777;
-	    padding: 5px 8px;
+	    padding: 5px 34px 5px 8px;
 	    border: none;
 	    box-shadow: none;
 	    background: transparent;
